--- a/examples/index.html
+++ b/examples/index.html
@@ -7,8 +7,8 @@
   <link rel="icon" href="/images/logo.png" />
   <link rel="apple-touch-icon" href="/images/logo.png" />
 </head>
-<body>
-  <div id="page" class="container"></div>
+<body style="background:#eee">
+  <div id="page"></div>
   <script type="module" src="./app.js"></script>
 </body>
 </html>
